Closed Bug 484656 Opened 17 years ago Closed 16 years ago

cannot post news messages (for one account only)

Categories

(Thunderbird :: Message Compose Window, defect)

x86_64
Linux
defect
Not set
major

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 3.0rc1

People

(Reporter: tessarakt, Assigned: jcranmer)

References

Details

(Keywords: dogfood, regression, Whiteboard: [workaround in comment 18])

Attachments

(2 files)

User-Agent: Mozilla/5.0 (X11; U; Linux i686 (x86_64); en-US; rv:1.9.1b4pre) Gecko/20090318 Firefox/3.1b4pre Build Identifier: Mozilla/5.0 (X11; U; Linux x86_64; en-US; rv:1.9.1b3pre) Gecko/20090321 Lightning/1.0pre Thunderbird/3.0b2 in 3.0 beta2, I cannot post on my main newsserver. The message is: "Sending of message failed. Please verify that your Mail & Newsgroups account settings are correct and try again." Posting on news.mozilla.org works, though (obviously ...) Any ideas what settings to look on? Additional facts: * Server does not use SSL. * User-ID/password auth is needed. This info is set correctly though, as it is also needed for reading, which works fine. * "Always request authentication when connecting to this server" is set (on) for the account in question. Ryan K in mozilla.support.thunderbird asked me to "Check that TB3b didn't change your outbound server for your news account." It didn't, and I don't see how the default SMTP can affect posting using NNTP. I also tried out sniffing using Wireshark. What I think I saw: It just does not send anything to the server when trying to post a message. Reproducible: Sometimes Steps to Reproduce: Try to post a news message. Actual Results: An error message occurs (see above). Expected Results: The message should be sent. Only reproducible for one account (but always for that account). Also occurs in a 32bit pre-compiled version on the same machine. Only reproducible on this machine. I'm using the same NNTP server on another machine (Windows), and it works fine there (both on beta2 and now on latest-1.9.1).
Version: unspecified → Trunk
OK, I backuped all files for that account in the News folder of the profile, removed the account, deleted the files, re-added the account, and restored the old newsrc file. Now it works. Close if you like ... Although it would be interesting to know what caused the problem ...
Jens can you take your old profile and log what is going on ? You might have run into a bug whith the password manager changes that landed in B2, what version where you running before 3.0b2 ?
Well, I could take an old profile, I still have a backup, yes. But what exactly am I supposed to log, and how? I was running 2.0.0.19 before, but I think the profile and the account is much older.
(In reply to comment #3) > Well, I could take an old profile, I still have a backup, yes. > > But what exactly am I supposed to log, and how? documentation is at https://wiki.mozilla.org/MailNews:Logging and nntp is what would be nice to run. > I was running 2.0.0.19 before, but I think the profile and the account is much > older. Thanks for the information.
Tried it out with log level 5 for nntp. Nothing gets written to that file when trying to post a message.
I know of at least two other people with the same problem; I think the last time I checked, this was an error at the compose level. The NNTP logs have been collected at least once, maybe twice, so they're no help. I'm going to CC the other two people who have seen this. I believe the exact error comes from nsMsgSend::Fail; the actual error code that's causing the failure should be findable at some point in the stack frame through that point, for anyone with a debug build.
Yeah, this looks like what I saw, but a new profile didn't fix things for me.
Component: General → Message Compose Window
QA Contact: general → message-compose
I shutdown TB, backed up, started TB, deleted all news servers, shutdown TB, deleted the profile News dir, restarted TB, re-added the problematic news server with the same account settings, and now things work fine posting news messages to the problematic server. The news server was SSL/TLS port 563 with always require auth checked. I tested under Vista 64 Ultimate using Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9.1b4pre) Gecko/20090420 Shredder/3.0b3pre.
what is last build where it works?
Putting blocking-thunderbird3? ... newsgroup client which doesn't post neither to news.gmane.org nor to news.felk.cvut.cz (one of the biggest public newsservers for the general Usenet) is just very broken.
Flags: blocking-thunderbird3?
Attached file log of NNTP traffic
(In reply to comment #11) > Created an attachment (id=387048) [details] > log of NNTP traffic If you read comment 6, the NNTP log is not interesting, but rather we need the actual error code that causes the error message. I think a full stack trace at nsMsgComposeAndSend::Fail would be sufficient.
Whiteboard: [needs information]
Can you post details on how to provide such log? I can reproduce the problem on laptop and latest Tb.
Status: UNCONFIRMED → NEW
Ever confirmed: true
see URL in the comment 4 However, when I have removed those two problematic accounts and re-add them again, everything works.
(In reply to comment #12) > If you read comment 6, the NNTP log is not interesting, but rather we need the > actual error code that causes the error message. I think a full stack trace at > nsMsgComposeAndSend::Fail would be sufficient. sorry, comment 14, second paragraph
I don't think this blocks currently given the lack of clear STRs.
Flags: blocking-thunderbird3? → blocking-thunderbird3-
Well, I've caught this bug myself, so I can actually debug the matter...
Assignee: nobody → Pidgeot18
Status: NEW → ASSIGNED
Keywords: dogfood
And the failure code that I received was... NS_MSG_INVALID_OR_MISSING_SERVER. After doing some analysis, the problem seems to arise from the difference between FindServer and FindRealServer. Anyone afflicted by this problem should be able to get around this problem by modifying in about:config the "hostname" preference of the server to be the same as the "realhostname" preference (e.g., mail.server.server8.hostname and mail.server.server8.realhostname). The primary point of failure is in nsNNTPProtocol::Initialize, it seems.
Whiteboard: [needs information] → [workaround in comment 18]
Attached patch Fixes the issueSplinter Review
This simple patch fixes the issues I've found: we were using the wrong version of the hostname to do the posting, so anyone who changes the hostname attribute would magically find themselves locked out of posting. What this does is fixes the two incorrect uses and adds a simple test to make sure that news posting in this manner works. Statement of risk: This patch only affects people with newsgroup accounts who have changed the news servers of said accounts. The behavior that is changed is a regression from TB 2.0. There is additionally a test to ensure that this feature is not regressed further.
Attachment #406434 - Flags: superreview?(bienvenu)
Attachment #406434 - Flags: review?(bienvenu)
Attachment #406434 - Flags: approval-thunderbird3?
Comment on attachment 406434 [details] [diff] [review] Fixes the issue thx, Joshua.
Attachment #406434 - Flags: superreview?(bienvenu)
Attachment #406434 - Flags: superreview+
Attachment #406434 - Flags: review?(bienvenu)
Attachment #406434 - Flags: review+
Attachment #406434 - Flags: approval-thunderbird3?
Attachment #406434 - Flags: approval-thunderbird3+
Pushed as changeset 4164:2d3a795a4fb4.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.0rc1
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: