Bug 484656 - News post URLs used realHostName instead of hostName. r/sr=bienvenu, a=bienvenu

--HG--
extra : rebase_source : 19a346fb769268c609a16acb585a6b65f2561eb8